option('with-dbus-service-dir', type: 'string', value: '', description: 'choose directory for dbus service files [default=PREFIX/share/dbus-1/services]')
option('with-systemduserunitdir', type: 'string', value: '', description: 'choose directory for systemd user units, or \'no\' to disable [default=PREFIX/lib/systemd/user]')
option('enable-gcr', type: 'boolean', value: true, description: 'build with gcr')
option('enable-admin', type: 'boolean', value: true, description: 'build with admin backend')
option('enable-http', type: 'boolean', value: true, description: 'build with http/dav backend')
option('enable-avahi', type: 'boolean', value: true, description: 'build with avahi backend')
option('enable-udev', type: 'boolean', value: true, description: 'build with libudev')
option('enable-gudev', type: 'boolean', value: true, description: 'build with gudev support')
option('enable-fuse', type: 'boolean', value: true, description: 'build with FUSE support')
option('enable-gdu', type: 'boolean', value: true, description: 'build with GDU volume monitor')
option('enable-udisks2', type: 'boolean', value: true, description: 'build with libudisks2')
option('enable-libsystemd-login', type: 'boolean', value: true, description: 'build with libsystemd-login')
option('enable-afc', type: 'boolean', value: true, description: 'build with AFC backend')
option('enable-goa', type: 'boolean', value: true, description: 'build with GOA volume monitor')
option('enable-keyring', type: 'boolean', value: true, description: 'build with GNOME Keyring support')
option('enable-bluray', type: 'boolean', value: true, description: 'build with bluray metadata support')
option('enable-libusb', type: 'boolean', value: true, description: 'build with libusb support')
option('enable-samba', type: 'boolean', value: true, description: 'build with samba support')
option('enable-archive', type: 'boolean', value: true, description: 'build with archive support')
option('enable-nfs', type: 'boolean', value: true, description: 'build with NFS support')
option('enable-cdda', type: 'boolean', value: true, description: 'build with CDDA backend')
option('enable-google', type: 'boolean', value: true, description: 'build with Google backend')
option('enable-gphoto2', type: 'boolean', value: true, description: 'build with gphoto2 support')
option('enable-libmtp', type: 'boolean', value: true, description: 'build with libmtp support')
option('enable-afp', type: 'boolean', value: true, description: 'build with AFP support')
option('enable-man', type: 'boolean', value: false, description: 'generate man pages')
option('enable-devel-utils', type: 'boolean', value: false, description: 'generate development utility programs')
option('enable-installed-tests', type: 'boolean', value: false, description: 'enable installed unit tests')
