option('with-dbus-service-dir', type: 'string', value: '', description: 'choose directory for dbus service files [default=PREFIX/share/dbus-1/services]')
option('with-systemduserunitdir', type: 'string', value: '', description: 'choose directory for systemd user units, or \'no\' to disable [default=PREFIX/lib/systemd/user]')

option('enable-admin', type: 'boolean', value: true, description: 'build with admin backend')
option('enable-afc', type: 'boolean', value: true, description: 'build with afc backend and volume monitor')
option('enable-afp', type: 'boolean', value: true, description: 'build with afp backends')
option('enable-archive', type: 'boolean', value: true, description: 'build with archive backend')
option('enable-cdda', type: 'boolean', value: true, description: 'build with cdda backend')
option('enable-dnssd', type: 'boolean', value: true, description: 'build with dnssd backend')
option('enable-gdu', type: 'boolean', value: true, description: 'build with gdu volume monitor')
option('enable-goa', type: 'boolean', value: true, description: 'build with goa volume monitor')
option('enable-google', type: 'boolean', value: true, description: 'build with google backend')
option('enable-gphoto2', type: 'boolean', value: true, description: 'build with gphoto2 backend and volume monitor')
option('enable-http', type: 'boolean', value: true, description: 'build with http/dav backends')
option('enable-mtp', type: 'boolean', value: true, description: 'build with mtp backend and volume monitor')
option('enable-nfs', type: 'boolean', value: true, description: 'build with nfs backend')
option('enable-smb', type: 'boolean', value: true, description: 'build with smb backends')
option('enable-udisks2', type: 'boolean', value: true, description: 'build with udisks2 volume monitor')

option('enable-bluray', type: 'boolean', value: true, description: 'build with bluray metadata support')
option('enable-fuse', type: 'boolean', value: true, description: 'build with fuse support')
option('enable-gcr', type: 'boolean', value: true, description: 'build with gcr certificate support')
option('enable-gudev', type: 'boolean', value: true, description: 'build with gudev device support')
option('enable-keyring', type: 'boolean', value: true, description: 'build with keyring support')
option('enable-libsystemd-login', type: 'boolean', value: true, description: 'build with logind support')
option('enable-libusb', type: 'boolean', value: true, description: 'build with libusb interruption support')
option('enable-udev', type: 'boolean', value: true, description: 'build with libudev device support')

option('enable-devel-utils', type: 'boolean', value: false, description: 'build with development utility programs')
option('enable-installed-tests', type: 'boolean', value: false, description: 'enable installed unit tests')
option('enable-man', type: 'boolean', value: false, description: 'generate man pages')
option('enable-programs', type: 'boolean', value: false, description: 'generate deprecated programs')
